--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -65,3 +65,76 @@ cassandra-snapshot-store {
   # Host:Port pairs are also supported. In that case the port parameter will be ignored.
   contact-points = ["192.168.99.100:30534"]
 }
+
+# Properties for akka.kafka.ProducerSettings can be
+# defined in this section or a configuration section with
+# the same layout.
+akka.kafka.producer {
+  # Tuning parameter of how many sends that can run in parallel.
+  parallelism = 100
+
+  # How long to wait for `KafkaProducer.close`
+  close-timeout = 60s
+
+  # Fully qualified config path which holds the dispatcher configuration
+  # to be used by the producer stages. Some blocking may occur.
+  # When this value is empty, the dispatcher configured for the stream
+  # will be used.
+  use-dispatcher = "akka.kafka.default-dispatcher"
+
+  # Properties defined by org.apache.kafka.clients.producer.ProducerConfig
+  # can be defined in this configuration section.
+  kafka-clients {
+    bootstrap.servers = "localhost:32189"
+  }
+}
+
+# Properties for akka.kafka.ConsumerSettings can be
+# defined in this section or a configuration section with
+# the same layout.
+akka.kafka.consumer {
+  # Tuning property of scheduled polls.
+  poll-interval = 50ms
+
+  # Tuning property of the `KafkaConsumer.poll` parameter.
+  # Note that non-zero value means that blocking of the thread that
+  # is executing the stage will be blocked.
+  poll-timeout = 50ms
+
+  # The stage will be await outstanding offset commit requests before
+  # shutting down, but if that takes longer than this timeout it will
+  # stop forcefully.
+  stop-timeout = 30s
+
+  # How long to wait for `KafkaConsumer.close`
+  close-timeout = 20s
+
+  # If offset commit requests are not completed within this timeout
+  # the returned Future is completed `CommitTimeoutException`.
+  commit-timeout = 15s
+
+  # If commits take longer than this time a warning is logged
+  commit-time-warning = 1s
+
+  # If the KafkaConsumer can't connect to the broker the poll will be
+  # aborted after this timeout. The KafkaConsumerActor will throw
+  # org.apache.kafka.common.errors.WakeupException which will be ignored
+  # until max-wakeups limit gets exceeded.
+  wakeup-timeout = 3s
+
+  # After exceeding maxinum wakeups the consumer will stop and the stage will fail.
+  max-wakeups = 10
+
+  # Fully qualified config path which holds the dispatcher configuration
+  # to be used by the KafkaConsumerActor. Some blocking may occur.
+  use-dispatcher = "akka.kafka.default-dispatcher"
+
+  # Properties defined by org.apache.kafka.clients.consumer.ConsumerConfig
+  # can be defined in this configuration section.
+  kafka-clients {
+    # Disable auto-commit by default
+    enable.auto.commit = false
+
+    bootstrap.servers = "localhost:32189"
+  }
+}
