--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -49,7 +49,7 @@ cassandra-journal {
 
   # Comma-separated list of contact points in the Cassandra cluster.
   # Host:Port pairs are also supported. In that case the port parameter will be ignored.
-  contact-points = ["192.168.99.100:30534"]
+  contact-points = ["192.168.99.100:30889"]
 
   event-adapters {
     tagging = "com.lightbend.flights.TaggingEventAdapter"
@@ -63,7 +63,7 @@ cassandra-journal {
 cassandra-snapshot-store {
   # Comma-separated list of contact points in the Cassandra cluster.
   # Host:Port pairs are also supported. In that case the port parameter will be ignored.
-  contact-points = ["192.168.99.100:30534"]
+  contact-points = ["192.168.99.100:30889"]
 }
 
 # Properties for akka.kafka.ProducerSettings can be
@@ -85,7 +85,7 @@ akka.kafka.producer {
   # Properties defined by org.apache.kafka.clients.producer.ProducerConfig
   # can be defined in this configuration section.
   kafka-clients {
-    bootstrap.servers = "localhost:32189"
+    bootstrap.servers = "127.0.0.1:9092"
   }
 }
 
@@ -135,6 +135,6 @@ akka.kafka.consumer {
     # Disable auto-commit by default
     enable.auto.commit = false
 
-    bootstrap.servers = "localhost:32189"
+    bootstrap.servers = "127.0.0.1:9092"
   }
 }
