refactored the main project into a subdirectory and added the cassandra and kafka dev servers, also added switch for different CQRS message-passing

--- a/flight-booking/src/main/resources/application.conf
+++ b/flight-booking/src/main/resources/application.conf
@@ -47,9 +47,7 @@ akka {
 
 cassandra-journal {
 
-  # Comma-separated list of contact points in the Cassandra cluster.
-  # Host:Port pairs are also supported. In that case the port parameter will be ignored.
-  contact-points = ["192.168.99.100:30889"]
+  port = 9142
 
   event-adapters {
     tagging = "com.lightbend.flights.TaggingEventAdapter"
@@ -61,9 +59,8 @@ cassandra-journal {
 }
 
 cassandra-snapshot-store {
-  # Comma-separated list of contact points in the Cassandra cluster.
-  # Host:Port pairs are also supported. In that case the port parameter will be ignored.
-  contact-points = ["192.168.99.100:30889"]
+
+  port = 9142
 }
 
 # Properties for akka.kafka.ProducerSettings can be
